<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_gravity="center">
            <EditText
                style="@style/CustomEditText"
                android:hint="@string/email"
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"/>
            <EditText
                style="@style/CustomEditText"
                android:hint="@string/password"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"/>

            <Button
                style="@style/CustomButton"
                android:layout_marginTop="30dp"
                android:id="@+id/btn_login"
                android:text="@string/login"/>

            <Button
                style="@style/CustomButton"
                android:layout_marginTop="20dp"
                android:id="@+id/btn_register"
                android:text="@string/register_here" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>